test/should-fail/no-such-method-super/exe.dk
// -*- mode: C++; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

// no-such-method-super

klass k1
{
  method object-t foo(object-t self)
  {
    dk:foo(super);
    return self;
  }
}

int-t main()
{
  object-t o = make(k1:klass);
  dk:foo(o);
  return 0;
}
